syntax = "proto3";

package api.v1.entities;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ckrwl/alunalun/api/gen/api/v1/entities;entitiesv1";

// User represents an authenticated user
message User {
  string id = 1;                                  // UUID
  string email = 2;
  string username = 3;                            // From usernames table
  optional string display_name = 4;
  optional string avatar_url = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// UserProfile represents public profile information
message UserProfile {
  string id = 1;
  string username = 2;
  optional string display_name = 3;
  optional string avatar_url = 4;
  google.protobuf.Timestamp created_at = 5;
}

// AuthProvider represents a linked auth method
message AuthProvider {
  string provider = 1;                            // "google", "github", etc
  string provider_user_id = 2;
  bool email_verified = 3;
  bool is_primary = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp last_used_at = 6;
}